src/go2cs/Parser/GoParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GoParser.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class GoParser : GoParserBase {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BREAK=1, DEFAULT=2, FUNC=3, INTERFACE=4, SELECT=5, CASE=6, DEFER=7, GO=8, 
		MAP=9, STRUCT=10, CHAN=11, ELSE=12, GOTO=13, PACKAGE=14, SWITCH=15, CONST=16, 
		FALLTHROUGH=17, IF=18, RANGE=19, TYPE=20, CONTINUE=21, FOR=22, IMPORT=23, 
		RETURN=24, VAR=25, NIL_LIT=26, IDENTIFIER=27, L_PAREN=28, R_PAREN=29, 
		L_CURLY=30, R_CURLY=31, L_BRACKET=32, R_BRACKET=33, ASSIGN=34, COMMA=35, 
		SEMI=36, COLON=37, DOT=38, PLUS_PLUS=39, MINUS_MINUS=40, DECLARE_ASSIGN=41, 
		ELLIPSIS=42, LOGICAL_OR=43, LOGICAL_AND=44, EQUALS=45, NOT_EQUALS=46, 
		LESS=47, LESS_OR_EQUALS=48, GREATER=49, GREATER_OR_EQUALS=50, OR=51, DIV=52, 
		MOD=53, LSHIFT=54, RSHIFT=55, BIT_CLEAR=56, EXCLAMATION=57, PLUS=58, MINUS=59, 
		CARET=60, STAR=61, AMPERSAND=62, RECEIVE=63, DECIMAL_LIT=64, OCTAL_LIT=65, 
		HEX_LIT=66, FLOAT_LIT=67, IMAGINARY_LIT=68, RUNE_LIT=69, RAW_STRING_LIT=70, 
		INTERPRETED_STRING_LIT=71, WS=72, COMMENT=73, TERMINATOR=74, LINE_COMMENT=75;
	public const int
		RULE_sourceFile = 0, RULE_topLevelDecl = 1, RULE_packageClause = 2, RULE_importDecl = 3, 
		RULE_importSpec = 4, RULE_importPath = 5, RULE_declaration = 6, RULE_constDecl = 7, 
		RULE_constSpec = 8, RULE_identifierList = 9, RULE_expressionList = 10, 
		RULE_typeDecl = 11, RULE_typeSpec = 12, RULE_functionDecl = 13, RULE_methodDecl = 14, 
		RULE_receiver = 15, RULE_varDecl = 16, RULE_varSpec = 17, RULE_block = 18, 
		RULE_statementList = 19, RULE_statement = 20, RULE_simpleStmt = 21, RULE_expressionStmt = 22, 
		RULE_sendStmt = 23, RULE_incDecStmt = 24, RULE_assignment = 25, RULE_assign_op = 26, 
		RULE_shortVarDecl = 27, RULE_emptyStmt = 28, RULE_labeledStmt = 29, RULE_returnStmt = 30, 
		RULE_breakStmt = 31, RULE_continueStmt = 32, RULE_gotoStmt = 33, RULE_fallthroughStmt = 34, 
		RULE_deferStmt = 35, RULE_ifStmt = 36, RULE_switchStmt = 37, RULE_exprSwitchStmt = 38, 
		RULE_exprCaseClause = 39, RULE_exprSwitchCase = 40, RULE_typeSwitchStmt = 41, 
		RULE_typeSwitchGuard = 42, RULE_typeCaseClause = 43, RULE_typeSwitchCase = 44, 
		RULE_typeList = 45, RULE_selectStmt = 46, RULE_commClause = 47, RULE_commCase = 48, 
		RULE_recvStmt = 49, RULE_forStmt = 50, RULE_forClause = 51, RULE_rangeClause = 52, 
		RULE_goStmt = 53, RULE_type_ = 54, RULE_typeName = 55, RULE_typeLit = 56, 
		RULE_arrayType = 57, RULE_arrayLength = 58, RULE_elementType = 59, RULE_pointerType = 60, 
		RULE_interfaceType = 61, RULE_sliceType = 62, RULE_mapType = 63, RULE_channelType = 64, 
		RULE_methodSpec = 65, RULE_functionType = 66, RULE_signature = 67, RULE_result = 68, 
		RULE_parameters = 69, RULE_parameterDecl = 70, RULE_expression = 71, RULE_primaryExpr = 72, 
		RULE_unaryExpr = 73, RULE_conversion = 74, RULE_operand = 75, RULE_literal = 76, 
		RULE_basicLit = 77, RULE_integer = 78, RULE_operandName = 79, RULE_qualifiedIdent = 80, 
		RULE_compositeLit = 81, RULE_literalType = 82, RULE_literalValue = 83, 
		RULE_elementList = 84, RULE_keyedElement = 85, RULE_key = 86, RULE_element = 87, 
		RULE_structType = 88, RULE_fieldDecl = 89, RULE_string_ = 90, RULE_anonymousField = 91, 
		RULE_functionLit = 92, RULE_index = 93, RULE_slice = 94, RULE_typeAssertion = 95, 
		RULE_arguments = 96, RULE_methodExpr = 97, RULE_receiverType = 98, RULE_eos = 99;
	public static readonly string[] ruleNames = {
		"sourceFile", "topLevelDecl", "packageClause", "importDecl", "importSpec", 
		"importPath", "declaration", "constDecl", "constSpec", "identifierList", 
		"expressionList", "typeDecl", "typeSpec", "functionDecl", "methodDecl", 
		"receiver", "varDecl", "varSpec", "block", "statementList", "statement", 
		"simpleStmt", "expressionStmt", "sendStmt", "incDecStmt", "assignment", 
		"assign_op", "shortVarDecl", "emptyStmt", "labeledStmt", "returnStmt", 
		"breakStmt", "continueStmt", "gotoStmt", "fallthroughStmt", "deferStmt", 
		"ifStmt", "switchStmt", "exprSwitchStmt", "exprCaseClause", "exprSwitchCase", 
		"typeSwitchStmt", "typeSwitchGuard", "typeCaseClause", "typeSwitchCase", 
		"typeList", "selectStmt", "commClause", "commCase", "recvStmt", "forStmt", 
		"forClause", "rangeClause", "goStmt", "type_", "typeName", "typeLit", 
		"arrayType", "arrayLength", "elementType", "pointerType", "interfaceType", 
		"sliceType", "mapType", "channelType", "methodSpec", "functionType", "signature", 
		"result", "parameters", "parameterDecl", "expression", "primaryExpr", 
		"unaryExpr", "conversion", "operand", "literal", "basicLit", "integer", 
		"operandName", "qualifiedIdent", "compositeLit", "literalType", "literalValue", 
		"elementList", "keyedElement", "key", "element", "structType", "fieldDecl", 
		"string_", "anonymousField", "functionLit", "index", "slice", "typeAssertion", 
		"arguments", "methodExpr", "receiverType", "eos"
	};

	private static readonly string[] _LiteralNames = {
		null, "'break'", "'default'", "'func'", "'interface'", "'select'", "'case'", 
		"'defer'", "'go'", "'map'", "'struct'", "'chan'", "'else'", "'goto'", 
		"'package'", "'switch'", "'const'", "'fallthrough'", "'if'", "'range'", 
		"'type'", "'continue'", "'for'", "'import'", "'return'", "'var'", "'nil'", 
		null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "','", "';'", "':'", 
		"'.'", "'++'", "'--'", "':='", "'...'", "'||'", "'&&'", "'=='", "'!='", 
		"'<'", "'<='", "'>'", "'>='", "'|'", "'/'", "'%'", "'<<'", "'>>'", "'&^'", 
		"'!'", "'+'", "'-'", "'^'", "'*'", "'&'", "'<-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BREAK", "DEFAULT", "FUNC", "INTERFACE", "SELECT", "CASE", "DEFER", 
		"GO", "MAP", "STRUCT", "CHAN", "ELSE", "GOTO", "PACKAGE", "SWITCH", "CONST", 
		"FALLTHROUGH", "IF", "RANGE", "TYPE", "CONTINUE", "FOR", "IMPORT", "RETURN", 
		"VAR", "NIL_LIT", "IDENTIFIER", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", 
		"L_BRACKET", "R_BRACKET", "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", "PLUS_PLUS", 
		"MINUS_MINUS", "DECLARE_ASSIGN", "ELLIPSIS", "LOGICAL_OR", "LOGICAL_AND", 
		"EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS", 
		"OR", "DIV", "MOD", "LSHIFT", "RSHIFT", "BIT_CLEAR", "EXCLAMATION", "PLUS", 
		"MINUS", "CARET", "STAR", "AMPERSAND", "RECEIVE", "DECIMAL_LIT", "OCTAL_LIT", 
		"HEX_LIT", "FLOAT_LIT", "IMAGINARY_LIT", "RUNE_LIT", "RAW_STRING_LIT", 
		"INTERPRETED_STRING_LIT", "WS", "COMMENT", "TERMINATOR", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GoParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GoParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GoParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GoParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SourceFileContext : ParserRuleContext {
		public PackageClauseContext packageClause() {
			return GetRuleContext<PackageClauseContext>(0);
		}
		public EosContext[] eos() {
			return GetRuleContexts<EosContext>();
		}
		public EosContext eos(int i) {
			return GetRuleContext<EosContext>(i);
		}
		public ImportDeclContext[] importDecl() {
			return GetRuleContexts<ImportDeclContext>();
		}
		public ImportDeclContext importDecl(int i) {
			return GetRuleContext<ImportDeclContext>(i);
		}
		public TopLevelDeclContext[] topLevelDecl() {
			return GetRuleContexts<TopLevelDeclContext>();
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return GetRuleContext<TopLevelDeclContext>(i);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sourceFile; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterSourceFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitSourceFile(this);
		}
	}

	[RuleVersion(0)]
	public SourceFileContext sourceFile() {
		SourceFileContext _localctx = new SourceFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_sourceFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 200; packageClause();
			State = 201; eos();
			State = 207;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 202; importDecl();
				State = 203; eos();
				}
				}
				State = 209;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 215;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNC) | (1L << CONST) | (1L << TYPE) | (1L << VAR))) != 0)) {
				{
				{
				State = 210; topLevelDecl();
				State = 211; eos();
				}
				}
				State = 217;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelDeclContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public FunctionDeclContext functionDecl() {
			return GetRuleContext<FunctionDeclContext>(0);
		}
		public MethodDeclContext methodDecl() {
			return GetRuleContext<MethodDeclContext>(0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterTopLevelDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitTopLevelDecl(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelDeclContext topLevelDecl() {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_topLevelDecl);
		try {
			State = 221;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 218; declaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 219; functionDecl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 220; methodDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageClauseContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(GoParser.IDENTIFIER, 0); }
		public PackageClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterPackageClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitPackageClause(this);
		}
	}

	[RuleVersion(0)]
	public PackageClauseContext packageClause() {
		PackageClauseContext _localctx = new PackageClauseContext(Context, State);
		EnterRule(_localctx, 4, RULE_packageClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 223; Match(PACKAGE);
			State = 224; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDeclContext : ParserRuleContext {
		public ImportSpecContext[] importSpec() {
			return GetRuleContexts<ImportSpecContext>();
		}
		public ImportSpecContext importSpec(int i) {
			return GetRuleContext<ImportSpecContext>(i);
		}
		public EosContext[] eos() {
			return GetRuleContexts<EosContext>();
		}
		public EosContext eos(int i) {
			return GetRuleContext<EosContext>(i);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterImportDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitImportDecl(this);
		}
	}

	[RuleVersion(0)]
	public ImportDeclContext importDecl() {
		ImportDeclContext _localctx = new ImportDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_importDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 226; Match(IMPORT);
			State = 238;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
			case DOT:
			case RAW_STRING_LIT:
			case INTERPRETED_STRING_LIT:
				{
				State = 227; importSpec();
				}
				break;
			case L_PAREN:
				{
				State = 228; Match(L_PAREN);
				State = 234;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (((((_la - 27)) & ~0x3f) == 0 && ((1L << (_la - 27)) & ((1L << (IDENTIFIER - 27)) | (1L << (DOT - 27)) | (1L << (RAW_STRING_LIT - 27)) | (1L << (INTERPRETED_STRING_LIT - 27)))) != 0)) {
					{
					{
					State = 229; importSpec();
					State = 230; eos();
					}
					}
					State = 236;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 237; Match(R_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportSpecContext : ParserRuleContext {
		public ImportPathContext importPath() {
			return GetRuleContext<ImportPathContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(GoParser.IDENTIFIER, 0); }
		public ImportSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importSpec; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterImportSpec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitImportSpec(this);
		}
	}

	[RuleVersion(0)]
	public ImportSpecContext importSpec() {
		ImportSpecContext _localctx = new ImportSpecContext(Context, State);
		EnterRule(_localctx, 8, RULE_importSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 241;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFIER || _la==DOT) {
				{
				State = 240;
				_la = TokenStream.LA(1);
				if ( !(_la==IDENTIFIER || _la==DOT) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			State = 243; importPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportPathContext : ParserRuleContext {
		public String_Context string_() {
			return GetRuleContext<String_Context>(0);
		}
		public ImportPathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importPath; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterImportPath(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitImportPath(this);
		}
	}

	[RuleVersion(0)]
	public ImportPathContext importPath() {
		ImportPathContext _localctx = new ImportPathContext(Context, State);
		EnterRule(_localctx, 10, RULE_importPath);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 245; string_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public ConstDeclContext constDecl() {
			return GetRuleContext<ConstDeclContext>(0);
		}
		public TypeDeclContext typeDecl() {
			return GetRuleContext<TypeDeclContext>(0);
		}
		public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoParserListener typedListener = listener as IGoParserListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 12, RULE_declaration);
		try {
			State = 250;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CONST:
				EnterOuterAlt(_localctx, 1);
				{
				State = 247; constDecl();
				}
				break;
			case TYPE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 248; typeDecl();
				}
				break;
			case VAR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 249; varDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
